rust/kcl-lib/tests/array_elem_pop_empty_fail/execution_error.snap
---
source: kcl/src/simulation_tests.rs
description: Error from executing array_elem_pop_empty_fail.kcl
---
KCL Semantic error

  × semantic: Cannot pop from an empty array
   ╭─[2:8]
 1 │ arr = []
 2 │ fail = pop(arr)
   ·        ────┬───
   ·            ╰── tests/array_elem_pop_empty_fail/input.kcl
   ╰────
